--- a/markup/scss/add-property-form.scss
+++ b/markup/scss/add-property-form.scss
@@ -30,7 +30,7 @@ $media-expressions: (
 	transition: padding 0.5s ease;
 	
 	.sideBar-active & {
-		padding: 0 10px 0 320px;
+		padding: 0 10px 0 310px;
 	}
 	
 	&.sectionListingActive {
@@ -44,7 +44,7 @@ $media-expressions: (
 	}
 	
 	.attactment-block, .basics-block, .feature-block, .contact-information{
-		padding: 75px 0 0;
+		padding: 75px 20px 0;
 	}
 	
 	.select2-container{
@@ -82,6 +82,7 @@ $media-expressions: (
 		}
 		
 		.listing-opener{
+			text-align: center;
 			text-decoration: none;
 			color: $black;
 			@include font(40,36);
@@ -170,7 +171,7 @@ $media-expressions: (
 				}
 				
 				&:after {
-					background: $index-white;
+					background: $white;
 					position: absolute;
 					left: 0;
 					right:100%;
@@ -760,20 +761,17 @@ $media-expressions: (
 				
 				.propertyDocumentCloseBtn{
 					position: absolute;
-					top: 10px;
-					right: 10px;
-					color: $black;
+					top: 50%;
+					right: 50%;
+					color: $red;
 					text-decoration: none;
 					z-index: 6;
-					@include font(30,32);
+					@include font(50,50);
 					opacity: 0;
 					visibility: hidden;
 					transition: opacity 0.4s ease, visibility 0.4s ease, color 0.4s ease;
 					cursor:pointer;
-					
-					&:hover{
-						color: $red;
-					}
+					margin: -25px -25px 0 0;
 				}
 				
 				img{
