--- a/markup/css/main.css
+++ b/markup/css/main.css
@@ -1232,7 +1232,12 @@ a {
   left: 0;
   z-index: 999;
   transform: translateX(-300px);
+  -webkit-transform: translateX(-300px);
+  -moz-transform: translateX(-300px);
+  -ms-transform: translateX(-300px);
   transition: transform 0.5s ease;
+  -webkit-transition: transform 0.5s ease;
+  -moz-transition: transform 0.5s ease;
   padding: 52px 0 0;
 }
 
@@ -1246,11 +1251,17 @@ a {
   #sidebar-dashboard {
     width: 100%;
     transform: translateX(-100%);
+    -webkit-transform: translateX(-100%);
+    -ms-transform: translateX(-100%);
+    -moz-transform: translateX(-100%);
   }
 }
 
 .sideBar-active #sidebar-dashboard {
   transform: translateX(0);
+  -webkit-transform: translateX(0);
+  -moz-transform: translateX(0);
+  -ms-transform: translateX(0);
 }
 
 #sidebar-dashboard .user-picture {
